ecmascript/parser/tests/test262-error-references/fail/305ebbf168c6d218.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/305ebbf168c6d218.js:1:7
  |
1 | let x,
  |       ^

